{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "b13cfdf0-0665-4ab3-9cf0-e99983f8ff15",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "d6186198-24d6-473d-9b58-34c00d6a488b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Restart",
                    "type": "Button",
                    "id": "ba47fd9c-7d2b-4b34-8670-bfa0a276d187",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "2dd3e81f-eb01-4cbf-bb19-ca369bba02fe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Continue",
                    "type": "Button",
                    "id": "1cf417cf-1546-40fa-bba4-3d9e9d84d960",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnlockSkill1",
                    "type": "Button",
                    "id": "d8858740-27c2-4fc4-9cc4-ac6d0afa258f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnlockSkill2",
                    "type": "Button",
                    "id": "25b37a69-fbc6-4a94-8fc3-2d29aa0efb7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UnlockSkill3",
                    "type": "Button",
                    "id": "3fcf911f-6a0c-4066-8915-e7cad4b64c96",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "533eaa09-fefb-4272-8e75-f3405192557e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Arrows",
                    "id": "59705e2d-9be5-4973-b8c4-4cf972c33cc0",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "99a6d092-2f45-444c-bbdf-e6b5649c44f0",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "be56898c-5c16-46a6-bc2e-8d39988f97f9",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "2a2cd3a2-de1b-4463-bf8d-f288c71da06e",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1ec54b56-98e7-44ff-8b8e-d20864f160d1",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "ZQSD",
                    "id": "8a8ee767-b3b2-49dc-a941-d21f8ad7d194",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "3d5041c0-e107-4a53-a65c-28e817ebfd7a",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "7626eedc-b3f0-4d87-ac45-ee90bf119921",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d3147a41-8768-4f3b-a145-a07830881001",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5f8e3de3-4d9a-4631-9959-2558daddb737",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "eb9bac79-9693-449d-b5c0-4d805c3cdc91",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Restart",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8391b02c-4648-4ea1-b788-58545f44c6ef",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f23d589d-55aa-4ae2-9eaa-438424c1d88c",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Continue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be688573-b865-40c2-b183-fa39c15c7b22",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UnlockSkill1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fc6fe23d-e1b3-4722-822d-c4ddf6f57214",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UnlockSkill2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "951fa73e-a7a5-4b74-8fdf-861fc20c6bf8",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UnlockSkill3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa0b35e3-041c-4378-a950-7b91b7a375e9",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d5df6f13-7c9a-448c-aa32-4edbce9a27ef",
            "actions": [
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "e83797b6-11e9-4fd3-979c-98c5da3900d0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Confirm",
                    "type": "Button",
                    "id": "fa2afada-8f04-42e4-a88c-a9e767b00c99",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "AnyKey",
                    "type": "Button",
                    "id": "befcfdf7-4baf-4f86-8a59-5bc0a9c9f946",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e26f2ed4-c0c7-4296-b2da-472ca3aafbe6",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25df7485-cef0-4795-9a57-05d15fa9b55f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Confirm",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2d67e76c-ae2c-4c47-949f-34c86a029c38",
                    "path": "*/{PrimaryTrigger}",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "085ec479-955a-45e1-9371-a8aa437d675b",
                    "path": "<Keyboard>/anyKey",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "AnyKey",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}